After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 62762 - log doesn't accept a base smaller than one
log doesn't accept a base smaller than one
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Analytics
git master
Other All
: Normal major
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2001-10-21 20:56 UTC by Ottavio G. Rizzo
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Ottavio G. Rizzo 2001-10-21 20:56:04 UTC
The function logarithm is well defined if the base is >0 but !=1
Gnumeric thinks that it makes sense only if the base is >1
For example:

=log(4,0.5)  ----> #NUM!

rather than returning -2

I guess someone slept through some calculus lecture (I hope he wasn't a
student of mine :-)
Comment 1 Jody Goldberg 2001-10-21 21:14:44 UTC
Fixed in CVS.  Thanks for noticing.  I've added that to our test suite.